--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- First, create a form tag where our inputs will be nested -->
-
+    <form action="" method="get">
 
       <!-- Add a label for 'fullname'-->
+      <label for="fullname"></label>
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
+      <input type="text" id="fullname" name="fullname" placeholder="Enter Name">
 
 
       <!-- Add a label for 'email'-->
