--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
-      <input type="text" id="fullname" name="fullname" placeholder="Enter Name">
+      <input id="fullname" type="text" name="fullname" placeholder="Enter Name">
 
 
       <!-- Add a label for 'email'-->
@@ -26,7 +26,7 @@
 
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-      <input type="text" id="email" name="email" placeholder="Enter Email">
+      <input id="email" type="text" name="email" placeholder="Enter Email">
 
 
       <!-- Add a label for 'phone'-->
