Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- First, create a form tag where our inputs will be nested -->
-    <form action="" method="get">
+    <form action="" method="post">
 
       <!-- Add a label for 'fullname'-->
       <label for="fullname">fullname</label>
@@ -30,9 +30,11 @@
 
 
       <!-- Add a label for 'phone'-->
+      <label for="phone">phone</label>
 
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
+      <input id="phone" type="text" name="email" placeholder="Enter Email">
 
 
       <!-- Add a label for 'message'-->
