--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-      <input id="phone" type="text" name="email" placeholder="Enter Email">
+      <input id="phone" type="tel" name="phone" placeholder="Enter Telephone">
 
 
       <!-- Add a label for 'message'-->
