--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
       <!-- Add an input with the type set to 'submit' -->
       <input type="submit" value="submit!">
 
+      </form>
+
 
   </body>
 </html>
