--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
-      <input id="fullname" type="text" name="fullname" placeholder="Enter Name">
+      <input id="fullname" type="text" name="fullname" placeholder="Enter Name" required>
 
 
       <!-- Add a label for 'email'-->
@@ -26,7 +26,7 @@
 
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-      <input id="email" type="email" name="email" placeholder="Enter Email">
+      <input id="email" type="email" name="email" placeholder="Enter Email" required>
 
 
       <!-- Add a label for 'phone'-->
@@ -34,7 +34,7 @@
 
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-      <input id="phone" type="tel" name="phone" placeholder="Enter Telephone">
+      <input id="phone" type="tel" name="phone" placeholder="Enter Telephone(optional)">
 
 
       <!-- Add a label for 'message'-->
@@ -46,6 +46,7 @@
 
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
+      <input type="checkbox" id="checkbox">
 
 
 
